# aws_csv_to_json_converter_python

./: README.md  cdk.json  cdk.py  package-lock.json  package.json  pyproject.toml
cdk/: __init__.py  csv_converter.py
cdk.out/: csv-converter-dev.assets.json  csv-converter-dev.template.json  manifest.json  tree.json
events/convert_files/: lambda_handler.py
